# nonna

esp/: .gitignore  CMakeLists.txt  otaflash.py  sdkconfig
esp/main/: CMakeLists.txt  http_params.c  logo.c  main.c  nonna.h  ota.c  proto  wifi_man.c
esp/main/nonna_esp/: http_params.h  logo.h  ota.h  wifi_man.h
picos/: .gitignore  CMakeLists.txt
picos/src/: CMakeLists.txt
picos/src/bootsel_button/: CMakeLists.txt  bootsel_button.c  bootsel_button.h
picos/src/motors/: CMakeLists.txt  main.c  motors.c  motors.h
picos/src/nanopb/: CMakeLists.txt
picos/src/proto/: CMakeLists.txt  nonna.options  nonna.pb.c  nonna.pb.h  nonna.proto  proto_framing.c  proto_framing.h
picos/src/sensors/: CMakeLists.txt  brain.c  brain.h  control_loop.c  control_loop.h  main.c  neural_network.c  neural_network.h  sensors.c  sensors.h  turn_pid.c  turn_pid.h
